--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="email"],input[type='password'],input[type="text"]{
+    @apply w-full border rounded-2xl py-2 px-3 my-1;
+}
+
+button.primary{
+    background-color: #F5385D;
+    @apply w-full rounded-2xl text-white py-2;
+}
